# minecraft-bedrock-launcher

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: languages.json  licenses.ts  translations.ts
src/: App.tsx  index.scss  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  profiles.rs  settings.rs  themes.rs  utils.rs  versions.rs
src/assets/: credits.json  licenses.json
src/assets/translations/: en-US.json  pt-PT.json
src/components/Checkbox/: index.tsx
src/components/LButton/: index.scss  index.tsx
src/components/Notifications/: index.tsx
src/components/Select/: index.tsx
src/context/: AboutContext.tsx  NewsContext.tsx  PatchNotesContext.tsx  SettingsContext.tsx
src/routes/Bedrock/: index.tsx
src/routes/Bedrock/pages/Installations/: index.scss  index.tsx
src/routes/Bedrock/pages/Installations/components/CreateDialog/: index.tsx
src/routes/Bedrock/pages/PatchNotes/: index.scss  index.tsx
src/routes/Bedrock/pages/Play/: index.scss  index.tsx
src/routes/News/: index.scss  index.tsx
src/routes/News/components/NewsItem/: index.tsx
src/routes/News/pages/Forum/: index.tsx
src/routes/News/pages/Official/: index.scss  index.tsx
src/routes/News/pages/Top/: index.tsx
src/routes/Settings/: index.tsx
src/routes/Settings/pages/About/: index.scss  index.tsx
src/routes/Settings/pages/Accounts/: index.tsx
src/routes/Settings/pages/General/: index.scss  index.tsx
src/routes/Settings/pages/Versions/: index.scss  index.tsx
(+13 files in other folders)
