[package]
name = "minecraft-bedrock-launcher"
version = "0.1.0"
description = "A launcher for Minecraft Bedrock"
authors = ["KalmeMarq"]
license = "GLP-3.0"
repository = "https://github.com/KalmeMarq/minicraft-bedrock-launcher"
default-run = "minecraft-bedrock-launcher"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["os-all", "shell-open"] }
dirs = "4.0"
tokio = { version = "1.18.2", features = ["full"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/tauri-plugin-single-instance" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/tauri-plugin-window-state" }
log = "0.4.17"
log4rs = "1.1.1"
time = { version = "0.3.14", features = ["serde", "serde-well-known"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde_yaml = "0.8.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
